Correct colour contrast on hints

--- a/app/assets/stylesheets/admin/_variables.scss
+++ b/app/assets/stylesheets/admin/_variables.scss
@@ -17,7 +17,6 @@ $amber:           #f39200;
 $red:             #e30613;
 $blue:            #3276b1;
 $selectable:      #e3e3e3;
-$hint:            #737373;
 
 $error-border-colour: #f2dede;
 
