--- a/app/assets/stylesheets/admin/base.scss
+++ b/app/assets/stylesheets/admin/base.scss
@@ -568,7 +568,7 @@ label.govuk-label.govuk-checkboxes__label.boolean.optional.govuk-label {
   display: block;
   margin-top: 10px;
   margin-bottom: 10px;
-  color: $hint;
+  color: $grey-dark;
   font-size: 14px;
 }
 
